<resources>
    <string name="app_name">PuppyFriends</string>

    <string name="sign_up">가입하기</string>
    <string name="mail_address">ID (메일 주소)</string>
    <string name="password">비밀번호 (6자리 이상)</string>
    <string name="ok">OK</string>
    <string name="mail_check">아이디 확인하기</string>
    <string name="sign_in">로그인</string>
    <string name="forget_your_password">비밀번호를 잊으셨습니까?</string>
    <string name="reset_my_password">비밀번호 초기화</string>
    <string name="create_profile">프로필 생성</string>
    <string name="name">이름:</string>
    <string name="enter_your_name">이름을 입력하세요</string>
    <string name="address">주소:</string>
    <string name="enter_your_address">주소를 입력하세요</string>
    <string name="phone_number">연락처:</string>
    <string name="enter_your_phone_number">연락처를 입력하세요</string>
    <string name="e_mail">E-mail:</string>
    <string name="email_address">이메일을 입력하세요</string>
    <string name="profile">프로필</string>
    <string name="edit_profile">프로필 등록하기</string>
    <string name="dies">###</string>
    <string name="log_out">로그아웃</string>

</resources>
