<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
            <ImageView
                android:id="@+id/imageView"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@drawable/login" />

        <TextView
            android:id="@+id/sign_up_TextView"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            style="?android:attr/listSeparatorTextViewStyle"/>
        <EditText
            android:id="@+id/SignUpMail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/mail_address"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/SignUpPass"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"/>
        <TextView
            android:id="@+id/AlreadyMember"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/mail_check"
            android:onClick="navigate_sign_in"
            android:clickable="true"
            android:gravity="center"
            android:background="@color/blue1"
            android:textColor="@color/colorPrimaryDark"/>
        <Button
            android:id="@+id/SignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="25sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"/>

    </TableLayout>
</ScrollView>
