<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/login" />

                <TextView
                    android:id="@+id/text"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="0dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="40sp" />

                <EditText
                    android:id="@+id/SignInMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail_address"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/SignInPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/SignInButton"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@color/blue1"
                    android:text="확인"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/notamember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="NavigateSignUp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimaryDark"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/forgetyourpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="NavigateForgetMyPassword"
                    android:text="@string/forget_your_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>